# py2rust

./: .gitignore  .gitmodules
.github/workflows/: convert-python-to-rust.yml
projects/Simple-Calculator/: Cargo.toml
projects/Simple-Calculator/src/: main.rs
projects/Streaming-Video-Server-and-Client/: Cargo.toml
projects/Streaming-Video-Server-and-Client/src/: client_logic.rs  lib.rs  rtp.rs  rtsp.rs  server_logic.rs  video_stream.rs
projects/kindle-clippings/: .gitignore  Cargo.toml
projects/kindle-clippings/src/: lib.rs  main.rs
projects/py-tic-tac-toe/: Cargo.toml
projects/py-tic-tac-toe/rust/converted_project/: Cargo.toml
projects/py-tic-tac-toe/rust/converted_project/src/: main.rs
projects/py-tic-tac-toe/src/: lib.rs  main.rs
py2rust/: README.md  main.py  prompt_generator.py  repo_ingester.py  rust_compiler.py
