[package]
name = "rtsp_video_streamer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
eframe = "0.27"
image = { version = "0.25", features = ["jpeg"] }
bytes = "1.6"
crossbeam-channel = "0.5"